# openstack-chef

./: .gitignore  .gitreview  .kitchen.dokken.yml  .kitchen.multi.yml  .kitchen.yml  .zuul.yaml  Berksfile  CONTRIBUTING.rst  README.md  README.rst  Rakefile  TESTING.rst  bindep.txt  kitchen.yml  setup.cfg  setup.py  tox.ini
.delivery/: project.toml
data_bags/db_passwords/: aodh.json  ironic.json  placement.json
data_bags/secrets/: designate_rndc.json
data_bags/service_passwords/: openstack-aodh.json  openstack-bare-metal.json  openstack-telemetry_metric.json
deploy-guide/source/: common_configure.rst  (+8 more)
doc/: requirements.txt  tools.md
environments/: allinone.json  integration-xenial.json  integration.json  multinode.json
playbooks/: integration.yaml  minimal.yaml  pre-delivery.yaml  pre-integration.yaml  pre.yaml
roles/: allinone.json  bare_metal.json  bare_metal_test.json  block_storage.json  block_storage_test.json  common.json  common_test.json  compute.json  compute_test.json  dashboard.json  dashboard_test.json  dns.json  dns_test.json  identity.json  identity_test.json  image.json  image_test.json  integration.json  integration_test.json  minimal.json  minimal_test.json  multinode-compute.json  multinode-controller.json  multinode-network.json  network.json  network_test.json  openstackclient.json  openstackclient_test.json  ops_database.json  ops_database_test.json  ops_messaging.json  ops_messaging_test.json  orchestration.json  orchestration_test.json  telemetry.json  telemetry_test.json
scripts/: README.md  README.rst
tools/: test_patch.rb
(+46 files in other folders)
